--- a/demo/CornerRadius/CornerRadius/Base.lproj/Main.storyboard
+++ b/demo/CornerRadius/CornerRadius/Base.lproj/Main.storyboard
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,20 +18,20 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LrJ-L2-URx">
-                                <rect key="frame" x="220" y="50" width="160" height="120"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="107.5" y="50" width="160" height="120"/>
+                                <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="ldc-Hj-Gn7"/>
                                     <constraint firstAttribute="width" constant="160" id="nao-Em-UI0"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我是Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOj-TA-68J">
-                                <rect key="frame" x="220" y="200" width="160" height="120"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="107.5" y="200" width="160" height="120"/>
+                                <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="0cy-mA-4zl"/>
                                     <constraint firstAttribute="height" constant="120" id="B5d-rt-61i"/>
@@ -36,23 +40,33 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vM3-vy-J1e">
+                                <rect key="frame" x="107" y="352" width="160" height="120"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="vM3-vy-J1e" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7IE-yZ-n7n"/>
                             <constraint firstItem="LrJ-L2-URx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="KfL-41-ObB"/>
                             <constraint firstItem="UOj-TA-68J" firstAttribute="top" secondItem="LrJ-L2-URx" secondAttribute="bottom" constant="30" id="RQ3-MM-g0t"/>
                             <constraint firstItem="LrJ-L2-URx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rdg-kA-r2L"/>
+                            <constraint firstItem="vM3-vy-J1e" firstAttribute="top" secondItem="UOj-TA-68J" secondAttribute="bottom" constant="32" id="TRB-ln-aZ2"/>
+                            <constraint firstItem="vM3-vy-J1e" firstAttribute="height" secondItem="UOj-TA-68J" secondAttribute="height" id="c6t-rz-0Me"/>
                             <constraint firstItem="UOj-TA-68J" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="har-qk-Bb7"/>
+                            <constraint firstItem="vM3-vy-J1e" firstAttribute="width" secondItem="UOj-TA-68J" secondAttribute="width" id="yoE-ez-T1d"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="testBtn" destination="vM3-vy-J1e" id="Cl7-SZ-vMi"/>
                         <outlet property="testLabel" destination="UOj-TA-68J" id="n9g-gz-L4a"/>
                         <outlet property="testView" destination="LrJ-L2-URx" id="kRR-WO-fed"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="448" y="397"/>
+            <point key="canvasLocation" x="28" y="297"/>
         </scene>
     </scenes>
 </document>
